UPDATE 12/07: BackendModule is done, ready to FrontendModule (The last one)
